istio/networking/grpc/gw.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: greeter
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - "*"
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        credentialName: istio-ingressgateway-certs
        mode: SIMPLE
